fix overflow

--- a/sass/_layout/_section.sass
+++ b/sass/_layout/_section.sass
@@ -4,7 +4,7 @@ section
     display: flex
     flex-direction: column
     align-items: center
-    overflow-x: hidden
+    overflow: hidden
     +media-sp
         margin-top: 10vh
     // common style
