--- a/sass/app.css
+++ b/sass/app.css
@@ -185,7 +185,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 @media only screen and (max-width: 767px) {
   section {
